name:                haskell-graql-blog
version:             0.1.0.0
author:              Felix Chapman
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     DataTypes
  build-depends:       base >= 4.7 && < 5
                     , markdown-unlit
  default-language:    Haskell2010
  ghc-options:         -pgmL markdown-unlit
